# ezgraph

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
docs/plans/: 2026-03-29-ezgraph-design.md  2026-03-29-ezgraph-implementation-plan.md
server/: index.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  file_parser.rs  lib.rs  main.rs
src-tauri/src/llm/: anthropic.rs  errors.rs  mod.rs  ollama.rs  openai.rs
src/components/: ContextPreview.tsx  DrawioEditor.tsx  FileImport.tsx  PromptInput.tsx  SettingsModal.tsx
src/hooks/: useLLM.ts
