[package]
name = "ezgraph"
version = "0.1.0"
edition = "2021"

[lib]
name = "ezgraph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
